<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/title_chat" />
    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_photo_camera_black_24dp"
        android:title="@string/title_post" />
    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/title_offers" />
    <item
        android:id="@+id/navigation_android"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/title_android" />

</menu>