<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_action_notification"
        android:title="@string/action_notifications"
        android:orderInCategory="1"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_manage_friends"
        android:icon="@drawable/ic_action_manage_friends"
        android:title="@string/action_manage_friends"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="3"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />
</menu>
