<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.davidg.exbook.PostActivity1">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bt_post1_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusableInTouchMode="true">

                <Button
                    android:id="@+id/bt_barcode_scanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/barcode_scanner"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/customed_button"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/tv_isbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="10dip"
                    android:gravity="left"
                    android:text="@string/isbn"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/textinputborder"
                    android:gravity="fill_horizontal"
                    android:hint="@string/isbn_hint"
                    android:inputType="textPersonName"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="10dip"
                    android:gravity="left"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/textinputborder"
                    android:gravity="fill_horizontal"
                    android:hint="@string/title_hint"
                    android:inputType="textPersonName"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_version_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="10dip"
                    android:gravity="left"
                    android:text="@string/version"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_version_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/textinputborder"
                    android:gravity="fill_horizontal"
                    android:hint="@string/version_hint"
                    android:inputType="numberDecimal"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tv_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginTop="10dip"
                    android:gravity="left"
                    android:text="@string/authors"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/et_authors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/textinputborder"
                    android:gravity="fill_horizontal"
                    android:hint="@string/authors_hint"
                    android:inputType="textPersonName"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            </LinearLayout>

        </ScrollView>

    <Button
        android:id="@+id/bt_post1_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/next"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/customed_button"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_bar" />
</android.support.constraint.ConstraintLayout>
