<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.davidg.exbook.PostActivity3">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_post_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:gravity="left"
                android:text="@string/price"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/textinputborder"
                    android:gravity="fill_horizontal"
                    android:hint="@string/dollar"
                    android:inputType="number"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/sp_currency"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />


            </LinearLayout>Linear

            <!--This View serves as a visual divider between list items-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"/>


            <Switch
                android:id="@+id/sw_negotiable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18dp"
                android:text="@string/negotiable" />

            <!--This View serves as a visual divider between list items-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Switch
                android:id="@+id/sw_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textSize="18dp"
                android:text="@string/free" />

            <!--This View serves as a visual divider between list items-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:id="@+id/tv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:gravity="left"
                android:text="@string/condition"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/sp_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"/>

            <!--This View serves as a visual divider between list items-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="20dip"
                android:layout_marginTop="10dip"
                android:gravity="left"
                android:text="@string/optional_description"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="top"
                android:minHeight="100dp"
                android:background="@drawable/textinputborder"
                android:hint="@string/description"
                android:inputType="textMultiLine" />

            <!--<EditText-->
                <!--android:id="@+id/et_version_number"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="10dip"-->
                <!--android:layout_marginLeft="20dip"-->
                <!--android:layout_marginRight="20dip"-->
                <!--android:background="@drawable/textinputborder"-->
                <!--android:gravity="fill_horizontal"-->
                <!--android:hint="@string/version_hint"-->
                <!--android:inputType="numberDecimal"-->
                <!--android:scrollHorizontally="true"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/bt_post_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/post_now"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/customed_button"
        android:textColor="#FFFFFF"
        android:textSize="16dp"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_bar" />

</android.support.constraint.ConstraintLayout>
